first page done

--- a/frontend/metafora/src/styles/modal.css
+++ b/frontend/metafora/src/styles/modal.css
@@ -5,7 +5,7 @@
 }
 
 *{
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .modal {
@@ -41,6 +41,8 @@
 .close {
     color: #aaa;
     float: right;
+    padding: 5px;
+    margin-right: 20px;
     font-size: 28px;
     font-weight: bold;
 }
@@ -51,29 +53,33 @@
     text-decoration: none;
     cursor: pointer;
 }
+.modal-user-icon{
+    font-size: 50px;
+}
 .modal-heading{
+    padding-top: 30px;
     text-align: center;
-    padding: 1rem;
-    margin-top: 1rem;
+    font-size: 1.3rem;
+    font-weight: 600;
 }
 .modal-label{
     display: block;
     text-align: left;
-    margin: 30px 0px 10px 10px;
-    font-weight: 600;
+    margin: 30px 0px 10px 20px;
+    font-weight: 400;
     color: var(--label_text);
 }
 .modal-input{
     width: 90%;
     padding: 8px;
-    border: 1px solid var(--label_text);
+    border: 1px solid lightgrey;
     border-radius: 5px;
 }
 .modal-button{
     display: block;
     margin: auto;
-    margin-top: 2rem;
-    width: 40%;
+    margin-top: 4rem;
+    width: 55%;
     padding: 10px;
     border: 1px solid var(--blue);
     border-radius: 5px;
@@ -81,4 +87,24 @@
     color: white;
     font-size: 1rem;
     font-weight: 600;
+}
+.modal-text{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 20px;
+    margin-bottom: 3px;
+    font-weight: 400;
+    font-size: 0.9rem;
+}
+.link{
+    text-decoration: none;
+    color: #4a5ff4;
+    float: right;
+    margin-right: 24px;
+    margin-top: 10px;
+    font-size: 0.85rem;
+}
+.signup{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1rem;
+    float: none;
 }
