--- a/frontend/metafora/src/styles/homepage.css
+++ b/frontend/metafora/src/styles/homepage.css
@@ -2,6 +2,7 @@
 :root{
     --blue: rgb(51, 51, 255);
     --hoverBlue: rgb(41, 41, 204);
+    --overlay: rgba(0, 0, 0, 0.5);
 }
 /* reset default margin and padding*/
 *{
@@ -35,10 +36,9 @@ body{
     padding: 10px 50px 0px 0px;
 }
 .navbar-logo{
-    width: 40px;
+    width: 30px;
     height: auto;
     margin-right: 10px;
-    padding-bottom: 10px;
 }
 .logo-text{
     font-size: 1.2rem;
@@ -83,13 +83,74 @@ body{
 
 /* background imaage*/
 .heroe-image{
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url('../images/backgroundImg.jpeg');
+    background: url('../images/backgroundImg.jpeg'), var(--overlay);
+    background-blend-mode: darken;
     background-size: cover;
+    z-index: -1;
     background-position: center;
 }
-.heroe-overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 100vh;
+
+.hero-text{
+    display: flex;
+    padding-top: 220px;
+    padding-bottom: 0;
+    height: 56vh;
+    align-items: center;
+    color: white;
+    flex-direction: column;
+}
+
+.hero-text h1{
+    font-size: 2.7rem;
+    color: rgba(255, 255, 255);
+    margin-bottom: 10px;
+}
+
+.heroe-image p{
+    color: white;
+    font-size: 15px;
+}
+.main-booking-container{
+    display: flex;
+    justify-content: center;
+}
+
+.booking-container{
+    display: flex;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(50px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    height: 20vh;
+    width: 85vw;
+    padding: 20px;
+    align-items: flex-start;
+}
+.booking-items{
+    width: 20%;
+    background-color: #fff;
+    border: 1px solid lightgrey;
+    margin-left: 20px;
+    border-radius: 5px;
+    height: 8vh;
+}
+.booking-items p{
+    color: rgb(182, 50, 50);
+}
+.booking-items input {
+   padding: 1px solid red;
+}
+.booking-container-overlay{
+    background-color: var(--overlay);
+    z-index: 30;
+    position: absolute;
+    width: 100vw;
+    height: 7vh;
+    bottom: 0;
+    right: 0;
 }
