--- a/frontend/metafora/src/styles/login.css
+++ b/frontend/metafora/src/styles/login.css
@@ -3,41 +3,61 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .login-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
+    background-color: rgb(239, 249, 251);
+    padding-left: 5.7rem;
+    padding-right: 5.7rem;
+    padding-top: 4.5rem;
     background-size: cover;
-    background-position: center;
 }
-.login-subcontainer{
+
+.loginImg {
     display: flex;
+    align-items: center;
+    cursor: pointer;
 }
+.loginImg h2{
+    font-size: 1.3rem;
+}
+
+.logo {
+    width: 40px;
+    margin-right: 5px;
+}
+
+.login-subcontainer {
+    display: flex;
+    height: 48vh;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.login-subcontainer h2 {
+    color: #535252;
+    margin-bottom: 20px;
+    font-size: 3rem;
+}
+
+.login-subcontainer h5 {
+    color: rgba(10, 46, 101, .3);
+    font-size: 1.6rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+
 .login-form {
     background: rgba(255, 255, 255, 0.9);
-    padding: 20px;
+    padding: 3rem;
+    padding-top: 2rem;
+    margin-top: 200px;
     border-radius: 10px;
-    text-align: center;
-    width: 300px;
+    text-align: left;
+    width: 37rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-/* .login-container{
-    display: flex;
-} */
-
-/*
-.logo {
-    width: 50px;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-
-h2 {
-    color: #333;
-    margin-bottom: 20px;
 }
 
 form {
@@ -46,26 +66,56 @@ form {
 }
 
 label {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    margin-top: 30px;
     color: #666;
 }
 
 input {
     padding: 10px;
+    height: 3rem;
     border: 1px solid #ddd;
     border-radius: 5px;
-    margin-top: 5px;
+    margin-top: 1px;
     font-size: 14px;
 }
+.password-input{
+    border: none;
+}
+.password-container {
+    position: relative;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    color: rgba(10, 46, 101, .3);
+}
+/* Remove focus highlight */
+input:focus,
+button:focus {
+    outline: none;
+    box-shadow: none;
+}
 
+.password-container input {
+    width: calc(100% - 40px);
+    display: inline-block;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 20px;
+    top: 54%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.2rem;
+}
 button {
-    padding: 10px;
+    padding: 15px;
     background: #007bff;
     color: #fff;
     border: none;
+    width: 10vw;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
     font-size: 14px;
 }
 
@@ -73,24 +123,97 @@ button:hover {
     background: #0056b3;
 }
 
-.links {
+.last__div {
+    margin-top: 1.5rem;
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
 }
 
-.links a {
+a {
     color: #007bff;
     text-decoration: none;
     font-size: 14px;
+    margin-top: 0.7rem;
+}
+
+.links__span {
+    color: rgba(10, 46, 101, .3);
+    margin-right: 0.3rem;
 }
 
 .links a:hover {
     text-decoration: underline;
 }
 
-@media (max-width: 600px) {
-    .login-container {
-        width: 90%;
+
+@media (max-width: 768px) {
+    .login-page {
+        padding-left: 3.7rem;
+        padding-right: 3.7rem;
+        padding-top: 3.5rem;
+        height: 120vh;
     }
-} */
+    .login-subcontainer {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+    }
+    .login-subcontainer h2 {
+        margin-top: 4rem;
+        margin-bottom: 20px;
+        font-size: 2rem;
+        }
+    
+        .login-subcontainer h5 {
+            font-size: 1.4rem;
+        }
+
+        .login-form {
+            padding: 3rem;
+            padding-top: 2rem;
+            margin-top: 40px;
+            width: 32rem;
+        }
+        button {
+            padding: 13px;
+            width: 15vw;
+            font-size: 0.85rem;
+        }
+}
+
+@media (max-width: 600px){
+    .login-page {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        padding-top: 2.2rem;
+        height: 110vh;
+    }
+    .login-subcontainer h2 {
+        margin-top: 3rem;
+        margin-bottom: 20px;
+        font-size: 1.8rem;
+    }
+
+    .login-subcontainer h5 {
+        font-size: 1.3rem;
+    }
+
+    .login-form {
+        padding: 2.4rem;
+        padding-top: 1rem;
+        padding-bottom: 1.9rem;
+        width: 20rem;
+    }
+    .last__div {
+        margin-top: 1.5rem;
+        display: flex;
+        flex-direction: column;
+    }
+
+    button {
+        margin-top: 20px;
+        padding: 13px;
+        width: 25vw;
+        font-size: 0.85rem;
+    }
+}
