--- a/frontend/metafora/src/styles/busDetails.css
+++ b/frontend/metafora/src/styles/busDetails.css
@@ -1,36 +1,53 @@
 /* busDetails.css */
 
-.bus-details-page {
+ .bus-details-page {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: #f5f5f5;
+    min-height: 90vh;
+    background-color: #f3f3f3;
 }
+
 
 .bus-details-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: white;
+    width: 100vw;
+    background: #e1eff2;
     padding: 30px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
     border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); */
 }
-
 .bus-details-content {
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+.bus-detail-subcontent{
+    display: flex;
 }
 
 .bus-details {
     margin-top: 20px;
 }
-
+.img__div{
+    background-color: #d7ecf3;
+    border: 1px solid #d7ecf3;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 10px;
+}
+.img__div img{
+    width: 19rem;
+}
 .select-seat-button {
     background-color: #007bff;
     color: white;
     border: none;
-    padding: 10px 20px;
+    height: 10vh;
+    /* padding: 10px 20px; */
     border-radius: 5px;
     cursor: pointer;
     margin-top: 20px;
