--- a/frontend/metafora/src/styles/payment.css
+++ b/frontend/metafora/src/styles/payment.css
@@ -17,7 +17,9 @@
     max-width: 400px;
     width: 90%;
 }
-
+.payment-container{
+   border: 1px solid red;
+}
 .payment-popup h2 {
     margin-bottom: 20px;
 }
